--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,32 +2,62 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background-color: rgb(52, 131, 235);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-color: yellow;
+  position: fixed;
+  top: 0;
+  width: 100%
+}
+
+.main {
+ display: flex;
+ flex-direction: column;
+}
+
+.sitesDiv {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: rgba(0,0,0,.5);
+  height: 30vh;
+  margin: 5%;
 }
 
-.App-link {
-  color: #61dafb;
+.bitesDiv {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0,0,0,.5);
+  height: 30vh;
+  margin: 5%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.footer {
+  background-color: yellow;
+  position: fixed;
+  bottom: 0;
+  width: 100%
+}
+
+/*tablet*/
+@media screen and (min-width: 600px) {
+
+  .header {
+    display: flex;
+    flex-direction: row;
   }
-  to {
-    transform: rotate(360deg);
+
+  .main {
+    display: grid;
+    
   }
+
 }
