--- a/client/src/components/login.css
+++ b/client/src/components/login.css
@@ -1,3 +1,49 @@
 .login-form p {
   color: rgb(255,0,0);
 }
+
+form {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  align-items: center;
+  padding: 3%;
+}
+
+input {
+  margin: 4%;
+  border: 1px solid black;
+  border-radius: 5%;
+  padding: 2%;
+  min-width: 150px;
+}
+
+button {
+  margin: 4%;
+  min-width: 100px;
+  font-size: 1.01rem;
+  border: 1px solid black;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+@media screen and (min-width: 600px) {
+  form {
+    flex-direction: row;
+    width: 80%;
+    justify-content: center;
+  }
+
+  .login-form {
+    align-content: center;
+  }
+
+  input {
+    padding: 1%;
+    min-width: 185px;
+    margin: 2%;
+    padding: 0.75%;
+  }
+}
