--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,10 @@
 html, body {
-  height:100%;
+  height: 100%;
 }
 
 .App {
   text-align: center;
-  height:100%;
+  height: 100%;
 }
 
 body {
@@ -14,6 +14,7 @@ body {
 
 a {
   text-decoration: none;
+  cursor: pointer;
 }
 
 .header {
@@ -21,7 +22,6 @@ a {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  /* background-color: yellow; */
   position: fixed;
   top: 0;
   width: 100%;
@@ -33,7 +33,7 @@ a {
 }
 
 .main {
-  margin-top: 15vh;
+  margin-top: 20vh;
   height: 80vh;
   overflow: scroll;
   display: flex;
