--- a/client/src/components/home.css
+++ b/client/src/components/home.css
@@ -1,10 +1,9 @@
 .categories {
   display: flex;
+  flex-direction: column;
   justify-content: space-evenly;
-  border: 1px solid black;
-  max-width: 700px;
   height: 100vh;
-  margin: 0 auto;
+  margin: 4%;
 }
 
 .category-divs {
@@ -12,6 +11,25 @@
   align-items: center;
   justify-content: center;
   border: 1px solid black;
-  width: 250px;
-  height: 250px;
+  width: 100%;
+  height: 100%;
+  margin: 4% 0;
+}
+
+@media screen and (min-width: 600px) {
+  .categories {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    /* border: 1px solid black; */
+    max-width: 905px;
+    height: 100vh;
+    margin: 0 auto;
+  }
+
+  .category-divs {
+    width: 300px;
+    height: 300px;
+    margin-top: 2%;
+  }
 }
