--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,7 +12,7 @@ body {
   overflow: hidden;
 }
 
-a {
+a, .link {
   text-decoration: none;
   cursor: pointer;
 }
@@ -65,7 +65,5 @@ a {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     text-align: center;
     margin: 5%;
-
   }
-
 }
