--- a/client/src/components/destinations.css
+++ b/client/src/components/destinations.css
@@ -4,6 +4,11 @@
   margin: 0 auto;
 }
 
+.list-container {
+  max-width: 700px;
+  margin: 0 auto;
+}
+
 @media screen and (min-width: 600px) {
   .link {
     margin: 4%;
