--- a/client/src/components/singleDestination.css
+++ b/client/src/components/singleDestination.css
@@ -1,7 +1,7 @@
 .single-destination {
-  padding-bottom: 5%;
+  position: relative;
+  margin: 7% auto;
 }
-
 /* from w3 schools box-shadow: https://www.w3schools.com/cssref/css3_pr_box-shadow.asp */
 .single-destination:hover {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -10,9 +10,17 @@
 .single-destination h4 {
   font-size: 1.5rem;
   color: #000000;
+  margin: 2% 0 0 0;
 }
 
 .single-destination img {
   width: 100%;
   height: 100%;
+}
+
+.div-details {
+  background: rgba(255,255,255,0.65);
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
