--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,10 +41,11 @@ a, .link {
 }
 
 .footer {
-  position: static;
+  position: sticky;
   bottom: 0;
   height: 5vh;
   border-top: 1px solid black;
+  width: 100%;
 }
 
 /*tablet*/
