--- a/client/src/components/login.css
+++ b/client/src/components/login.css
@@ -1,3 +1,19 @@
+.login-form {
+  background-color: #956FE8;
+  opacity: 0.9;
+  align-content: center;
+  min-width: 325px;
+  width: 100%;
+  margin: 3% auto;
+  border-radius: 1%;
+  color: #FFFFFF;
+}
+
+.main {
+  /* background-image: url('https://www.housingwire.com/ext/resources/images/editorial/A-New-Big-Images/states/New-York-City.jpg?t=1453402066&width=898');
+  background-size: cover; */
+}
+
 .login-form p {
   color: rgb(255,0,0);
 }
@@ -5,7 +21,7 @@
 form {
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
+  margin: 0;
   align-items: center;
   padding: 3%;
 }
@@ -13,13 +29,14 @@ form {
 input {
   margin: 4%;
   border: 1px solid black;
-  border-radius: 5%;
-  padding: 2%;
-  min-width: 150px;
+  border-radius: 2%;
+  padding: 3%;
+  min-width: 200px;
+  font-size: 1.1rem;
 }
 
 button {
-  margin: 4%;
+  margin: 7%;
   min-width: 100px;
   font-size: 1.01rem;
   border: 1px solid black;
@@ -30,20 +47,16 @@ button:hover {
 }
 
 @media screen and (min-width: 600px) {
-  form {
-    flex-direction: row;
-    width: 80%;
-    justify-content: center;
-  }
-
   .login-form {
     align-content: center;
+    max-width: 435px;
+    height: 500px;
+    border-radius: 1%;
   }
 
-  input {
-    padding: 1%;
-    min-width: 185px;
-    margin: 2%;
-    padding: 0.75%;
+  form {
+    width: 80%;
+    justify-content: center;
+    margin: 0 auto;
   }
 }
