--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,6 +15,7 @@ body {
 a, .link {
   text-decoration: none;
   cursor: pointer;
+  color: #000000;
 }
 
 .header {
@@ -34,7 +35,7 @@ a, .link {
 
 .main {
   margin-top: 20vh;
-  height: 80vh;
+  height: 75vh;
   overflow: scroll;
   display: flex;
   flex-direction: column;
