--- a/client/src/components/home.css
+++ b/client/src/components/home.css
@@ -1,19 +1,41 @@
 .categories {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  height: 100vh;
-  margin: 4%;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100%;
+  border: solid 2px green;
 }
 
-.category-divs {
+.bites-div {
+  background-image: url('https://cdn.vox-cdn.com/thumbor/2bbzAXZf1-LjXY-Y46KGqhP5k0M=/0x0:3500x2000/570x321/filters:focal(1470x720:2030x1280):format(webp)/cdn.vox-cdn.com/uploads/chorus_image/image/65088847/New_York_City_Central_Park_from_Above.0.jpg');
+  background-size: cover;
+  color: white;
   display: flex;
   align-items: center;
   justify-content: center;
   border: 1px solid black;
   width: 100%;
-  height: 100%;
-  margin: 4% 0;
+  height: 30%;
+}
+.sites-div {
+  background-image: url('https://cdn.vox-cdn.com/thumbor/2bbzAXZf1-LjXY-Y46KGqhP5k0M=/0x0:3500x2000/570x321/filters:focal(1470x720:2030x1280):format(webp)/cdn.vox-cdn.com/uploads/chorus_image/image/65088847/New_York_City_Central_Park_from_Above.0.jpg');
+  background-size: cover;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid black;
+  width: 100%;
+  height: 30%;
+}
+.fave {
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 25%;
 }
 
 @media screen and (min-width: 600px) {
@@ -21,15 +43,15 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    /* border: 1px solid black; */
+    width: 500px;
     max-width: 905px;
-    height: 100vh;
+    height: 100%;
     margin: 0 auto;
   }
 
   .category-divs {
     width: 300px;
-    height: 300px;
+    height: 150px;
     margin-top: 2%;
   }
 }
