--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,7 +26,9 @@ a, .link {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 15vh;
+  height: 20vh;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
 
 .header h1 {
@@ -45,8 +47,9 @@ a, .link {
   position: sticky;
   bottom: 0;
   height: 5vh;
-  border-top: 1px solid black;
   width: 100%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
 
 /*tablet*/
