--- a/client/src/components/singleDestination.css
+++ b/client/src/components/singleDestination.css
@@ -23,4 +23,8 @@
   position: absolute;
   bottom: 0;
   width: 100%;
+  height: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
