--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -19,7 +19,7 @@ button {
   align-items: center;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 600px) {
   .loggedIn {
     margin-top: 0;
     padding-top: 0;
@@ -28,9 +28,7 @@ button {
     justify-content: flex-start;
     align-items: center;
   }
-  .loggedIn h3 {
-    margin: 0;
-  }
+
   .loggedIn div {
     display: flex;
     justify-content: space-around;
@@ -39,7 +37,7 @@ button {
 
   button {
     border-radius: 5%;
-    margin: 0;
+    /* margin: 0; */
   }
 
   .header h1 {
