--- a/client/src/components/main.css
+++ b/client/src/components/main.css
@@ -1,3 +1,7 @@
+.bites-div:hover, .sites-div:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 @media screen and (max-width: 600px) {
  .bites-div {
    margin: 7%;
