--- a/client/src/App.css
+++ b/client/src/App.css
@@ -44,6 +44,9 @@ a, .link {
 }
 
 .footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: sticky;
   bottom: 0;
   height: 5vh;
