--- a/client/src/components/details.css
+++ b/client/src/components/details.css
@@ -23,8 +23,10 @@
   margin: 3% 0;
 }
 .info-container {
-  height: 60%;
-  width: 75%;
-
-  background-color: rgba(255,255,255,.7);
+  height: 100%;
+  Width: 100%;
+  background-color: rgba(255,255,255,.6);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
